# Omni

./: .gitignore  Cargo.toml  GRAPHFY_REPORT.md  GRAPHIFY_AUDIT_REPORT.md  LICENSE  README.md  graph.json  last_mir_output.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  llvm-backend.yml  mlir-backend.yml  release.yml
crates/codegen-cranelift/: Cargo.toml  README.md
crates/codegen-cranelift/src/: lib.rs
crates/codegen-cranelift/tests/: abi_calls.rs  branch_call.rs  cranelift_integration.rs  integration.rs  interp_integration.rs  multi_return_entry.rs
crates/codegen-llvm/: Cargo.toml  README.md
crates/codegen-llvm/src/: lib.rs
crates/codegen-llvm/tests/: llvm_detection.rs  real_llvm_integration.rs  stub_bridge.rs  stub_fallback.rs
crates/codegen-mlir/: Cargo.toml  README.md
crates/codegen-wasm/: Cargo.toml  README.md
crates/fuzz_harness/: Cargo.toml
crates/lir/: Cargo.toml
crates/omni-compiler/: Cargo.toml  build.rs
crates/omni-compiler/src/: abi_check.rs  ast.rs  async_effects.rs  codegen.rs  codegen_lir.rs  codegen_rust.rs  comptime.rs  cst.rs  diagnostics.rs  formatter.rs  interpreter.rs  levenshtein.rs  lexer.rs  lib.rs  llvm_detect.rs  lsp.rs  lsp_incr_db.rs  lsp_salsa_db.rs  macros.rs  mir.rs  mir_optimize.rs  parser.rs  polonius.rs  resolver.rs  traits.rs  type_checker.rs  type_export.rs  vm.rs
crates/omni-compiler/tests/: advanced_features.rs  borrow_check_ui.rs  borrow_viz_ui.rs  codegen_lir.rs  cst_ui.rs  debug_full_vector.rs  debug_full_vector_parse.rs  debug_lex_core.rs  debug_tokens.rs  diagnostic_ui.rs  generated_regressions.rs  layout_edge_cases.rs  lsp_incr_db.rs  lsp_salsa.rs  mir_borrow_checks.rs  mir_field_projection.rs  mir_multi_block.rs  mir_optimize.rs  parser_recovery.rs  parser_ui.rs  pipeline_integration.rs  polonius_adapter.rs  polonius_facts.rs  polonius_parity.rs  polonius_parity_extra.rs  public_api_effects.rs  semantic_core.rs  semantic_effects.rs  semantic_unify.rs  stdlib_regressions.rs  stdlib_shims.rs  type_export.rs  type_inference_ui.rs
crates/omni-fuzz/: Cargo.toml
crates/omni-release/: Cargo.toml
crates/omni-selfhost/: Cargo.toml
crates/omni-stage0/: Cargo.toml
crates/omni-stdlib/: Cargo.toml
crates/polonius_engine_adapter/: Cargo.toml
crates/polonius_engine_adapter/src/: lib.rs
crates/polonius_engine_adapter/tests/: inproc_lib.rs
crates/polonius_engine_mock/: Cargo.toml
docs/: AUDIT_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXHAUSTIVE_AUDIT_REPORT.md  IMPLEMENTATION_STATUS.md  Omni_Complete_Specification.md  SECURITY.md  a.md  execution_log.md  llvm_integration.md  plan.md  reproducible_build.md  stdlib_reenable.md  step7_pr.md
docs/adr/: ADR-0001-workspace-resolver.md
examples/: blank_line.omni  function_call.omni  hello.omni  stdlib_usage.omni  temp_call.omni  test_input.omni  test_temp.omni  typecheck.omni
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer_parser.rs  serialization.rs
omni/stdlib/: collections.omni  (+5 more)
scripts/: compare_reproducible_build.ps1  download-llvm-win.ps1  dump_core_lines.py  inspect_core.py  pe_compare.py  pe_inspect_offsets.py  pe_normalize_diffs.py  pe_normalize_timestamp.py  pe_rdata_diff.py  pe_strip_codeview.py  preserve_stdlib.ps1  run-llvm-tests.sh  setup-llvm.ps1  setup-llvm.sh  test_fmt.rs  trigger-pr.ps1
tmp/: if_test.omni  license_theirs.txt
(+22 files in other folders)
