[package]
name = "omni-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
omni-compiler = { path = "../crates/omni-compiler" }

[[bin]]
name = "lexer_parser"
path = "fuzz_targets/lexer_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serialization"
path = "fuzz_targets/serialization.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

[workspace]