[package]
name = "codegen-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
lir = { path = "../lir" }
codegen-cranelift = { path = "../codegen-cranelift" }
inkwell = { version = "0.9", optional = true, default-features = false, features = ["llvm14-0"] }

[features]
with_inkwell = ["inkwell"]
real_llvm = []
with_inkwell_stub = []
